--- a/bpf/index.html
+++ b/bpf/index.html
@@ -698,6 +698,11 @@ Tracing CPU scheduler... Hit Ctrl-C to end.
 
             <section data-menu-title="TODO BPFtrace">
                 <h2>BPFtrace</h2>
+                <p>TODO - kilka komend tutaj</p>
+            </section>
+
+            <section data-menu-title="BPFtrace">
+                <h2>BPFtrace</h2>
                 <p>Przykładowy skrypt w języku BPFtrace</p>
                 <pre>
 BEGIN
@@ -858,8 +863,12 @@ la la la
                 </pre>
             </section>
 
-            <section data-menu-title="TODO DNS hang">
-                <h2>apka wisi i uj wi na co czeka (tutaj bpf do dnsów się kłania)F</h2>
+            <section data-menu-title="DNS hang">
+                <h3 class="r-fit-text">Muli przeglądanie sieci / aplikacja wisi na zapytaniach</h3>
+                <p>Z praktyki przeczuwam, że DNS dogorywa...</p>
+                <small class="fragment fade-in-then-semi-out">(firmowy dns po vpn, anyone :) ?)</small>
+                <p class="fragment semi-fade-out">Sprawdźmy to!</p>
+                <p>Live: narzędzie BPF'owe gethostlatency</p>
             </section>
 
             <section data-menu-title="Intrusive admin :)">
