--- a/bpf/index.html
+++ b/bpf/index.html
@@ -955,8 +955,10 @@ END
                 <p class="fragment fade-in-then-semi-out">Sprawdźmy :-)</p>
                 <pre class="bash fragment">
                     <code>
-TODO - ups... zabrakło mi czasu
-nie będzie pokazówki overscallingu :'<
+cat assets/scripts/bench.sh
+cat assets/scripts/bench.py
+grep HZ /boot/config-6.5.0-35-generic
+runqlat.bt
                     </code>
                 </pre>
             </section>
