--- a/bpf/index.html
+++ b/bpf/index.html
@@ -875,6 +875,11 @@ END
             <section data-menu-title="File access">
                 <h3>Brakuje jakiegoś pliku np. konfiguracyjnego</h3>
                 <p>Live: opensnoop + missing.py</p>
+
+                <aside class="notes">
+                    Pokazać, że nadupca cykliczne sprawdzanie cpufreq<br />
+                    Tu chodzi o temat jak coś łoi po dysku bez sensu. Jak jest odpowiednie natężenie, to żre zasoby
+                </aside>
             </section>
 
             <section data-menu-title="Short lived task">
